--- a/index4.html
+++ b/index4.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230709125553"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230709125553"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230709125553"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230709125553"></script>
-  <script src="files/script /tilt.js?_v=20230709125553"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230709222915"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230709222915"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230709222915"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230709222915"></script>
+  <script src="files/script /tilt.js?_v=20230709222915"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230709125553" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230709125553" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230709222915" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230709222915" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <header>
@@ -59,8 +59,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230709125553" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230709125553"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230709222915" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230709222915"></script> -->
 
 <body>
   <main id="swup" class="transition-fade">
@@ -149,34 +149,42 @@
 
               <div class="container text_plus_2">
                 <div style="padding-bottom: 0px;" class="row justify-content-center">
-                <div class="row justify-content-center">
-                  <div class="col-8">
-                    <picture><source srcset="img/Aston_post5.webp" type="image/webp"><img width="100%" src="img/Aston_post5.jpg" alt=""></picture>
-                  </div>
-                </div>
-                <div class="row justify-content-center">
-                  <div class="col-8">
-                    <picture><source srcset="img/Aston_post4.webp" type="image/webp"><img width="100%" src="img/Aston_post4.jpg" alt=""></picture>
-                  </div>
-                </div>
+                
+
+                  
                 <div class="row justify-content-center">
                   <div class="col-2"></div>
-                  <div style="color: #e1e1e1;   text-align: justify;" class="col-7">
-                    <h3>  The Aston Martin website design showcases a host of advantages that elevate the user's browsing experience and
-                    exemplify
-                    the brand's elegance and performance. With a focus on user experience (UX) and user interface (UI) design, this
-                    captivating website boasts a range of features that set it apart from the rest.</h3>
+                  <div style="color: #e1e1e1;    text-align: center;" class="col-7">
+                    <h2>Convenient choice of vehicle</h2>
                   </div>
                   <div class="col-2"></div>
                 </div>
                 <div style="padding-bottom: 0px;" class="row">
                   <div class="col-12">
-                    <picture><source srcset="img/Aston_post3.webp" type="image/webp"><img  style="margin-bottom: 0px; border-radius: 0px;" width="100%" src="img/Aston_post3.jpg" alt=""></picture>
+                    <picture><source srcset="img/aston_macbook.webp" type="image/webp"><img  style="margin-bottom: 0px; border-radius: 0px;" width="100%" src="img/aston_macbook.png" alt=""></picture>
                   </div>
                 </div>
               </div>
         </div>
       </div>
+        <div class="pg-1_bk_1">
+          <div class="container">
+          </div>
+          <picture><source srcset="img/aston_post_6.webp" type="image/webp"><img width="100%" src="img/aston_post_6.jpg" alt=""></picture>
+        </div>
+        <div style="padding-bottom: 0px;" class="pg-1_bk_2 pg-1_bk_2_aston">
+          <div class="container text_plus_2">
+            <div style="padding-bottom: 0px;" class="row justify-content-center">
+              <div class="row justify-content-center">
+                <div class="col-2"></div>
+                <div style="color: #e1e1e1;    text-align: center;" class="col-7">
+                  <h2>Convenient choice of vehicle</h2>
+                </div>
+                <div class="col-2"></div>
+              </div>
+            </div>
+          </div>
+        </div>
       <div class="pg-1_bk_3">
         <div class="container">
           <div class="row">
@@ -292,8 +300,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230709125553"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230709125553"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230709222915"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230709222915"></script> -->
 
 
 
@@ -304,15 +312,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230709125553"></script>
-<script src="files/script /locomotive.js?_v=20230709125553"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230709125553"></script>
+<script src="files/script /swup.js?_v=20230709222915"></script>
+<script src="files/script /locomotive.js?_v=20230709222915"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230709222915"></script>
 
-<script src="files/script /script.js?_v=20230709125553"></script>
+<script src="files/script /script.js?_v=20230709222915"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230709125553"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230709222915"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 </footer>
